--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,5 +24,9 @@ jobs:
     - name: Test
       run: make test
 
-    - name: Release
-      uses: softprops/action-gh-release@v1
+    - name: Archive artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: binaries
+        path: |
+          cris*
