--- a/.github/workflows/go-release.yml
+++ b/.github/workflows/go-release.yml
@@ -2,9 +2,8 @@ name: Go
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    tags:
+    - '*'
 
 jobs:
 
@@ -24,9 +23,6 @@ jobs:
     - name: Test
       run: make test
 
-    - name: Archive artifacts
-      uses: actions/upload-artifact@v4
+    - uses: ncipollo/release-action@v1
       with:
-        name: binaries
-        path: |
-          cris*
+        artifacts: "cris*"
